Jakarta EE 対応 (#110)
* feat: javax -> jakarta

* feat: Jetty12対応

* test: リクエストスコープの数を絶対数ではなく相対数で判定するように修正

* fix: リソースディレクトリは従来通りプロパティで管理するように修正

* feat: バージョン管理をparentに集約

* doc: 古い仕様の参照を削除