@@ -20,81 +20,8 @@
   </parent>
 
   <properties>
-    <ecj.version>3.5.1</ecj.version>
-    <nablarch-testing-jetty.artifact>nablarch-testing-jetty6</nablarch-testing-jetty.artifact>
-    <javax-servlet.artifact>servlet-api</javax-servlet.artifact>
-    <javax-servlet.version>2.5</javax-servlet.version>
-    <env.resources>${project.basedir}/src/test/env/jetty6/resources</env.resources>
-    <env.additional-test-source>${project.basedir}/src/test/env/jetty6/java</env.additional-test-source>
+    <jetty.version>jetty12</jetty.version>
   </properties>
-
-  <profiles>
-    <profile>
-      <id>java8</id>
-      <properties>
-        <ecj.version>4.6.1</ecj.version>
-      </properties>
-    </profile>
-    <profile>
-      <id>java9</id>
-      <properties>
-        <ecj.version>4.6.1</ecj.version>
-        <junit.additionalArgLine>--add-modules java.activation,java.xml.bind</junit.additionalArgLine>
-      </properties>
-    </profile>
-    <profile>
-      <id>java11</id>
-      <properties>
-        <ecj.version>4.6.1</ecj.version>
-        <nablarch-testing-jetty.artifact>nablarch-testing-jetty9</nablarch-testing-jetty.artifact>
-        <javax-servlet.artifact>javax.servlet-api</javax-servlet.artifact>
-        <javax-servlet.version>3.1.0</javax-servlet.version>
-        <env.resources>${project.basedir}/src/test/env/jetty9/resources</env.resources>
-        <env.additional-test-source>${project.basedir}/src/test/env/jetty9/java</env.additional-test-source>
-      </properties>
-      <dependencies>
-        <dependency>
-          <groupId>com.nablarch.dev</groupId>
-          <artifactId>nablarch-test-support</artifactId>
-          <scope>test</scope>
-          <exclusions>
-            <exclusion>
-              <groupId>org.mortbay.jetty</groupId>
-              <artifactId>jsp-api-2.1-glassfish</artifactId>
-            </exclusion>
-          </exclusions>
-        </dependency>
-
-        <dependency>
-          <groupId>com.sun.activation</groupId>
-          <artifactId>javax.activation</artifactId>
-          <version>1.2.0</version>
-          <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-          <groupId>javax.xml.bind</groupId>
-          <artifactId>jaxb-api</artifactId>
-          <version>2.3.1</version>
-          <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-          <groupId>com.sun.xml.bind</groupId>
-          <artifactId>jaxb-impl</artifactId>
-          <version>2.3.1</version>
-          <scope>compile</scope>
-        </dependency>
-
-        <dependency>
-          <groupId>com.sun.xml.bind</groupId>
-          <artifactId>jaxb-core</artifactId>
-          <version>2.3.0.1</version>
-          <scope>compile</scope>
-        </dependency>
-      </dependencies>
-    </profile>
-  </profiles>
 
   <dependencies>
 
@@ -137,9 +64,32 @@
     </dependency>
 
     <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>${javax-servlet.artifact}</artifactId>
-      <version>${javax-servlet.version}</version>
+      <groupId>org.eclipse.angus</groupId>
+      <artifactId>angus-activation</artifactId>
+      <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>jakarta.xml.bind</groupId>
+      <artifactId>jakarta.xml.bind-api</artifactId>
+      <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-impl</artifactId>
+      <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-core</artifactId>
+      <scope>compile</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
       <scope>provided</scope>
     </dependency>
 
@@ -164,14 +114,13 @@
     <dependency>
       <groupId>org.eclipse.jdt.core.compiler</groupId>
       <artifactId>ecj</artifactId>
-      <version>${ecj.version}</version>
+      <version>4.6.1</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
-      <groupId>org.hibernate</groupId>
+      <groupId>org.hibernate.validator</groupId>
       <artifactId>hibernate-validator</artifactId>
-      <version>5.3.6.Final</version>
       <scope>test</scope>
     </dependency>
 
@@ -189,12 +138,7 @@
 
     <dependency>
       <groupId>com.nablarch.framework</groupId>
-      <artifactId>${nablarch-testing-jetty.artifact}</artifactId>
-      <!--
-        最終的には jetty11 に対応したアーティファクトに切り替えてバージョンは bom で管理する。
-        ここでバージョンを明記しているのは CI を通すための一次的な処置。
-       -->
-      <version>5-NEXT-SNAPSHOT</version>
+      <artifactId>nablarch-testing-${jetty.version}</artifactId>
       <scope>test</scope>
     </dependency>
 
@@ -222,30 +166,8 @@
         <directory>src/test/java</directory>
       </testResource>
       <testResource>
-        <directory>${env.resources}</directory>
+        <directory>${project.basedir}/src/test/env/${jetty.version}/resources</directory>
       </testResource>
     </testResources>
-
-    <plugins>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>build-helper-maven-plugin</artifactId>
-        <version>1.12</version>
-        <executions>
-          <execution>
-            <id>add-test-source</id>
-            <phase>generate-test-sources</phase>
-            <goals>
-              <goal>add-test-source</goal>
-            </goals>
-            <configuration>
-              <sources>
-                <source>${env.additional-test-source}</source>
-              </sources>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
   </build>
 </project>
